--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Xhib-It
                         </div>
                         <h4 style="color:#ffcc66"><b>Watch Real</b></h4>
                         <div class="line-dec"></div>
-                        <p style="color:#ffffff"><b> Watch realtime cloud infrastructure & DevOps tools. <br> Know them by watching real.</b></p>
+                        <p style="color:#ffffff"><b> Watch realtime cloud infrastructure & DevOps tools. <br> Know them by watching them yourself.</b></p>
                     </div>
                 </div>
                 <div class="col-md-3 col-sm-6 col-xs-12">
@@ -113,7 +113,7 @@ Xhib-It
                         </div>
                         <h4 style="color:#ffcc66"><b>Other Services</b></h4>
                         <div class="line-dec"></div>
-                        <p style="color:#ffffff"> <b>Are you looking for more help? <br> Register with us for a session to talk about it. </b></p>
+                        <p style="color:#ffffff"> <b>Are you looking for more?? <br> Register with us for a session to talk about it. </b></p>
                     </div>
                 </div>
             </div>
@@ -127,7 +127,7 @@ Xhib-It
                     <div class="section-heading">
                         <h4>Register</h4>
                         <div class="line-dec"></div>
-                        <p> Register to get a session from us regarding the your favourite services. </p>
+                        <p> Register to schedule a meeting with experts. </p>
                         <div class="pop-button">
                             <h4>Register</h4>
                         </div>
@@ -183,12 +183,12 @@ Xhib-It
 
 				<div class="col-md-4 col-sm-12">
                     <div class="contact-info">
-                        <h4>Contact Info</h4>
+                        <h4>Contact Us</h4>
                         <ul>
 							<li><a href="#"><i class="fa fa-whatsapp"></i></a></li>
-                            <li><em>Whatsapp</em>: 040-040-0440</li><br>
+                            <li><em>Whatsapp</em>: +91-6305375490</li><br>
 							<li><a href="#"><i class="fa fa-google"></i></a></li>
-                            <li><em>Email</em>: admin@xhibit.com</li>
+                            <li><em>Email</em>: info@xhibit.com</li>
                         </ul>
                     </div>
                 </div>
@@ -206,7 +206,7 @@ Xhib-It
                 <div class="col-md-3 col-sm-10">
                     <div class="logo">
                         <a class="logo-ft scroll-top" href="#"><em>X</em>hib-IT</a>
-                        <p>Copyright &copy; 2020 Xhibit solutions.</p>
+                        <p>Copyright &copy; 2020 Xhibit Technologies.</p>
                     </div>
                 </div>
             </div>
